...
			const { email } = values.value as z.infer<typeof enterEmailSchema>
			await requestPasswordReset(email)
		},
	})

	return (
		<Layout.SafeAreaView testID='enter-email-screen'>
			<Layout.KeyboardAvoidingView
				style={[styles.container, { paddingBottom: 32 }]}
			>
				<Layout.ScrollView
					bounces={false}
					scrollToOverflowEnabled={true}
...
										}}
									/>
								</View>
							</View>
							<View style={{ gap: 8 }}>
								<Button.Root
									testID='send-link-button'
									size='lg'
									onPress={handleSubmit}
								>
									<Button.Text>{t('send_link')}</Button.Text>
								</Button.Root>

...
